# Multi-Agent-Alert-Triage-System

./: .env.example  .gitignore  GITHUB_DEPLOYED.md  IMPLEMENTATION_COMPLETE.md  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  GIT_SETUP.md
examples/: basic_usage.py  batch_processing.py
src/aml_triage/: __init__.py
src/aml_triage/agents/: __init__.py  context_builder.py  data_enrichment.py  decision_maker.py  risk_scoring.py  supervisor.py
src/aml_triage/core/: __init__.py  audit.py  base_agent.py  config.py  logging.py  system.py
src/aml_triage/models/: __init__.py  alert.py  context.py  decision.py  enrichment.py  risk.py
tests/: __init__.py
tests/integration/: test_workflow.py
tests/unit/: test_audit.py  test_base_agent.py
