[tool.poetry]
name = "aml-alert-triage"
version = "0.1.0"
description = "Multi-Agent Alert Triage System for AML/KYC Compliance"
authors = ["AML Triage Team"]
readme = "README.md"
packages = [{include = "aml_triage", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.39.0"
openai = "^1.54.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.0"
redis = "^5.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
structlog = "^24.1.0"
python-json-logger = "^2.0.7"
prometheus-client = "^0.19.0"
tenacity = "^8.2.3"
jsonschema = "^4.20.0"
python-dateutil = "^2.8.2"
uuid = "^1.30"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.8.0"
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
